Tue Sep 26 18:16:33 2000  Ezra Peisach  <epeisach@mit.edu>

	* sim_server.c: Warnigs cleanup of signed vs. unsigned arguments
 	to functions.

1999-10-26  Wilfredo Sanchez  <tritan@mit.edu>

	* Makefile.in: Clean up usage of CFLAGS, CPPFLAGS, DEFS, DEFINES,
	LOCAL_INCLUDES such that one can override CFLAGS from the command
	line without losing CPP search patchs and defines. Some associated
	Makefile cleanup.

1998-11-13  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Set the myfulldir and mydir variables (which are
		relative to buildtop and thisconfigdir, respectively.)
		Add a MY_SUBDIRS macro set to '.' to indicate that there
		are no subdirectories to be processed by the Makefile.

1998-05-06  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* sim_server.c (argv): POSIX states that getopt returns -1 when it
		is done parsing options, not EOF.

Wed Feb 18 15:35:38 1998  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Remove trailing slash from thisconfigdir.  Fix up
	BUILDTOP for new conventions.

Mon Feb  2 17:02:29 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Define BUILDTOP and thisconfigdir in the Makefile

Tue Feb 18 18:12:16 1997  Richard Basch  <basch@lehman.com>

	* sim_server.c: Use krb5_free_data_contents instead of krb5_xfree

Tue Feb  4 20:41:49 1997  Tom Yu  <tlyu@mit.edu>

	* Makefile.in:
	* configure.in: Update to new program build procedure.

Fri Nov 22 15:48:42 1996  unknown  <bjaspan@mit.edu>

	* sim_server.c (argv): use sizeof instead of h_length to determine
 	number of bytes of addr to copy from DNS response [krb5-misc/211]

Thu Nov  7 15:26:44 1996  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* sim_server.c (argv): Check the error return from
 		krb5_init_context(), and print an error message if
 		necessary.

Sat Sep 16 03:41:40 1995  Theodore Y. Ts'o  <tytso@dcl>

	* sim_server.c (main): Free the context and auth_context before
	        exiting.

Fri Sep 15 14:31:06 1995  Theodore Y. Ts'o  <tytso@dcl>
